--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2.0.0
       with:
         fetch-depth: 5
-    - uses: check-spelling/check-spelling@0.0.12-alpha
+    - uses: jsoref/check-spelling@prerelease
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         bucket: .github/actions
